# ICRA2026_HJ

./: .gitmodules  CLAUDE.md  INSTALLATION.md  TODO_HJ.md  docker-compose.yaml  index.html
.devcontainer/: devcontainer.json
.devcontainer/.install_utils/: bashrc_ext  glil_thirdparty_build.sh  post_installation.sh  udev_rules_t2v.sh
.docker_utils/: Dockerfile.base_arm  Dockerfile.base_x86  Dockerfile.nuc
HJ_docs/: 0404_HJ.md  3d_optimized_vel_planner.md  3d_optimizer_acceleration_plan.md  3d_planners_integration_plan.md  Debug_3d_local_raceline_optimization.md  TODO_0412.md  TODO_0413.md  devcontainer_gui_forwarding.md  dynamic_overtake_master_plan_20260429.md  launch_control.md  mpc_design.md  mpc_frenet_kin_v3c_live_debugging_20260421.md  mpc_overtake_redesign_plan_20260428.md  mpc_planner_state_machine_integration.md  mpc_redesign_frenet_kin_20260420.md  overtake_pipeline_redesign_20260427.md  overtake_strategy_redesign_20260425.md  sampling_planner_wobble_diagnosis.md  servo_calibration_bugfix.md  velocity_planner_3d_comparison.md  wifi_tune_setup.md
HJ_docs/debug/: glim_devel_setup_corruption.md
controller/: controller_manager.py  l1_params_server.py
controller/cfg/: controller.cfg
controller/ftg/: ftg.py
f110-simulator/launch/: simulator.rviz
f110_utils/libs/track_3d_validator/: CMakeLists.txt  package.xml  setup.py
f110_utils/libs/track_3d_validator/src/track_3d_validator/: __init__.py  track_3d_validator.py
perception/scripts/: multi_tracking.py
perception/src/: detect.cpp
planner/2.5d_gb_optimizer/: CMakeLists.txt  package.xml  summary_3d_raceline_optimization.md
planner/eth_spliner/: CMakeLists.txt
planner/fast_sqp_planner/: CMakeLists.txt  package.xml
planner/fast_sqp_planner/cfg/: FastSQPPlanner.cfg
planner/fast_sqp_planner/config/: fast_sqp_planner.yaml  state_machine_overtake.yaml  state_overtake.yaml
planner/fast_sqp_planner/launch/: fast_sqp_planner.launch  fast_sqp_planner_state.launch
planner/fast_sqp_planner/src/: fast_sqp_planner_node.py  fast_sqp_planner_sm.py  sqp_casadi copy.py  velocity_profiler.py
planner/fast_sqp_planner/src/backup/: fast_sqp_planner_node.py  fast_sqp_planner_sm.py  fast_sqp_planner_transitions.py
planner/mpc_planner/: CMakeLists.txt  package.xml
planner/mpc_planner/cfg/: FrenetKinCost.cfg  MPCCost.cfg
planner/mpc_planner/config/: state_observe.yaml  state_overtake.yaml  state_overtake_backup_20260420.yaml  state_overtake_backup_v2c_20260421.yaml  state_recovery.yaml  state_recovery_backup_20260420.yaml
planner/mpc_planner/launch/: mpc_planner_multi.launch  mpc_planner_observation.launch  mpc_planner_state.launch  mpc_planner_state_backup_20260420.launch
planner/mpc_planner/node/: mpc_planner_state_node.py  mpc_planner_state_node_backup_20260420.py  mpc_planner_state_node_backup_v2c_20260421.py
planner/mpc_planner/src/: frenet_kin_solver.py  frenet_kin_solver_backup_20260421.py  frenet_kin_solver_backup_v2c_20260421.py  geometric_fallback.py  mpc_raceline_lifter.py  mpcc_solver.py  side_decider.py
planner/overtaking_iy/: CMakeLists.txt  package.xml
rqt_gg_viewer/: CMakeLists.txt  package.xml  plugin.xml  setup.py
rqt_gg_viewer/src/rqt_gg_viewer/: gg_viewer_widget.py
sensors/ICRA2026-T2V/: .gitignore  README.md  T2V_CHECKPOINT.md  T2V_INTEGRATION.md
sensors/livox_ros_driver2/: CMakeLists.txt
stack_master/: CMakeLists.txt
stack_master/cfg/: GGTuner.cfg  GGTuner3D.cfg  SimpleMux.cfg  TestCtrl.cfg  VelPlanner3D.cfg
stack_master/config/: state_machine_params.yaml
stack_master/launch/: 3d_base_system.launch  3d_global_line.launch  3d_headtohead.launch  3d_headtohead_binned.launch  3d_headtohead_sqp.launch  3d_mapping.launch  3d_mpc_headtohead.launch  3d_sector_slicing.launch  base_system.launch  headtohead.launch  low_level.launch  servo_calibration.launch  test_launch_control.launch  test_vesc.launch
stack_master/scripts/: 3d_optimized_vel_planner.py  HJ_fbga_velocity_planner.py  bag.sh  bag_mapping.sh  fbga_velocity_planner.py  gg_tuner_3d_node.py  gg_tuner_node.py  global_velocity_planner.py  global_velocity_planner_3d.py  global_velocity_planner_3d.py_backup  global_velocity_planner_for_both_opt.py  rebuild_waypoints.sh  record_steering_bags.py  simple_mux.py  test_control_publisher.py  test_control_publisher_backup_20260501.py
state_machine/: CMakeLists.txt
state_machine/src/: 3d_state_machine_node.py  state_machine_node.py  (+1 more)
(+162 files in other folders)
