<?xml version="1.0"?>
<package format="2">
  <name>rqt_gg_viewer</name>
  <version>0.1.0</version>
  <description>rqt plugin for visualizing GGV diamond results with baseline diff</description>
  <maintainer email="iy@unicorn-racing.org">IY</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
